stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_inference_logical_operand_mismatch.snap
---
source: tests/fixtures.rs
assertion_line: 1431
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/inference_logical_operand_mismatch.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × logical operands must be Bool
   ╭─[tests/fixtures/diagnostics/types/inference_logical_operand_mismatch.ml:3:7]
 2 │   let ready = true;
 3 │   dbg(ready && 1)
   ·       ─────┬────
   ·            ╰── this logical expression has type `i64`
 4 │ }
   ╰────
  help: use a Bool expression here
