stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_list_get_index_type.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/list_get_index_type.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × list_get argument has the wrong type
   ╭─[tests/fixtures/diagnostics/types/list_get_index_type.ml:2:24]
 1 │ fn main() {
 2 │   dbg(list_get([1, 2], "zero"))
   ·                        ───┬──
   ·                           ╰── expected `i64`, found `String`
 3 │ }
   ╰────
  help: check the call argument type
