stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_lowercase_string_type.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/lowercase_string_type.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × invalid type spelling
   ╭─[tests/fixtures/diagnostics/types/lowercase_string_type.ml:2:14]
 1 │ fn main() {
 2 │   let value: string = "bad";
   ·              ───┬──
   ·                 ╰── `string` is not a source-level type name
 3 │   dbg(value)
   ╰────
  help: use `String`
